Add db init script

--- a/node/package.json
+++ b/node/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.ts",
   "scripts": {
     "build": "tsc",
+    "initdb": "npx prisma migrate dev --name init && npx prisma db seed",
     "serve": "nodemon"
   },
   "prisma": {
